<resources>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">46ccb43ade502912429785dc6909b191</string>
    <string name="FACEBOOK_APP_ID">1851070688497741</string>
    <string name="Intelligent_chip">Intelligent chips</string>
    <string name="Intelligent_chip_introduce">By distribution of chips, the paper analyzed main stock clinch a deal by chip map is straightforward, in the form of expression comes out, at the same time, through intelligent chip, can accurate judgment the banker cost, the banker with the market average costs, market profit cost comparison, keep up with the pace of the banker, to achieve the final profit.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_platform">Android</string>
    <string name="about_us_text">   Through unremitting efforts, Homily’s investment philosophy,“Index,first; Stock, Next. Long-term, First; Short-term, Next. Operate the Familiar.”, has rooted deeply in investors’ mind and helps them gain a lot when invest.</string>
    <string name="aboutus_version">Version: %s</string>
    <string name="account">Homily ID:</string>
    <string name="account_has_expired">The account has expired,please renew it</string>
    <string name="account_login">Account Login</string>
    <string name="action_add">Add Group</string>
    <string name="action_course">My course</string>
    <string name="action_group">Group</string>
    <string name="action_help">Help</string>
    <string name="action_home">Home</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_send">Send</string>
    <string name="action_share">Share</string>
    <string name="action_sync">Sync Favorites</string>
    <string name="activity_label_aboutus">AboutUs</string>
    <string name="activity_label_favorites">Favorites</string>
    <string name="activity_label_feedback">Feedback</string>
    <string name="activity_label_gubadetailcontent">Content</string>
    <string name="activity_label_gubapublish">Posts</string>
    <string name="activity_label_gubareply">Reply</string>
    <string name="activity_label_help">Help</string>
    <string name="activity_label_history">History</string>
    <string name="activity_label_homilyClass">Homily Class</string>
    <string name="activity_label_image">Photo</string>
    <string name="activity_label_news">News</string>
    <string name="activity_label_notice">Notice</string>
    <string name="activity_label_personal_gold_recharge">Recharge</string>
    <string name="activity_label_personalcenter">Personal Center</string>
    <string name="activity_label_product">Products</string>
    <string name="activity_label_producthelp">Product Help</string>
    <string name="activity_label_quote">Quotes</string>
    <string name="activity_label_search">Search</string>
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_surprise">Banker Hunter</string>
    <string name="add">Add</string>
    <string name="add_car_fail">Add to Shopping cart failed</string>
    <string name="add_car_success">Add to Shopping cart success</string>
    <string name="add_in">Add</string>
    <string name="add_in_already">Added</string>
    <string name="ak_login_protocol_scheme">ak1705744779753328</string>
    <string name="alert">Warm Tips</string>
    <string name="alert_cloudbrain_buytip">Have not purchased Stock Diagnosis function, please go to the store to buy</string>
    <string name="alert_cloudbrain_expired">This feature has expired</string>
    <string name="alert_cloudbrain_marketperssion">The current market does not support Stock Diagnosis function</string>
    <string name="alert_cloudbrain_tiptitle">Warm Tips</string>
    <string name="allCostLine">Market Average Cost</string>
    <string name="all_amount_name">Rise</string>
    <string name="all_amount_name1">Rise</string>
    <string name="all_bottom_tis">Bottom</string>
    <string name="all_buy_price">Price</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_chip">All Chips</string>
    <string name="all_clac">Compute</string>
    <string name="all_confirm">OK</string>
    <string name="all_day">(day)</string>
    <string name="all_deal_time">交易时间：</string>
    <string name="all_dialog_tips">Tips</string>
    <string name="all_failed">"数据加载失败，
点击重新加载！"</string>
    <string name="all_failed_calc">无法获取预估收益率，请稍后重试！</string>
    <string name="all_follow">FOLLOW</string>
    <string name="all_follow_tips">The Latest year Profits</string>
    <string name="all_hint_one_calc">input capital of one year ago</string>
    <string name="all_imitate_buy">Simulative Buying</string>
    <string name="all_imitate_deal">Simulative Trading</string>
    <string name="all_imitate_sell">Simulative Sell</string>
    <string name="all_income_month">Yield Ranking(Optimize Monthly)</string>
    <string name="all_income_title">Yield Ranking</string>
    <string name="all_line_tips">Historical performance only explains the product function instead of their future investment proposal or warranty!</string>
    <string name="all_listed_strategy">Strategy</string>
    <string name="all_listed_times">Listed Times</string>
    <string name="all_market_analysis">Market Analysis</string>
    <string name="all_menu_prime">Optimus Prime</string>
    <string name="all_money">Revenue amount</string>
    <string name="all_month">(month)</string>
    <string name="all_more">More</string>
    <string name="all_no_authority">Have not purchased, please go to the shop to buy</string>
    <string name="all_no_data">No data!</string>
    <string name="all_none">--</string>
    <string name="all_notice_unopen">The market has not yet opened the function!</string>
    <string name="all_one_title">Nearly one year income</string>
    <string name="all_price">Price</string>
    <string name="all_profit">Profit</string>
    <string name="all_ranking">Ranking</string>
    <string name="all_record">Simulative Record</string>
    <string name="all_request_failed">数据请求失败，请稍后重试！</string>
    <string name="all_self_analysis">Personal Analysis</string>
    <string name="all_stock_amount">Rise</string>
    <string name="all_stock_name">Name</string>
    <string name="all_stock_profit">Accumulated</string>
    <string name="all_stoploss">Stop loss</string>
    <string name="all_three_title">Nearly three year income</string>
    <string name="all_tips">Intelligent robots, stocks of choice!</string>
    <string name="all_update_time">update time：%1$s</string>
    <string name="all_warn">Tips</string>
    <string name="already_buy">Bought</string>
    <string name="already_delay">Your kit has been postponed</string>
    <string name="already_registered">Your phone number has been registered and do you want to login now?</string>
    <string name="amounts">Amounts:</string>
    <string name="analyse">Analyse</string>
    <string name="announcement">Announcements</string>
    <string name="app_name">Homily Chart</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="article">Article</string>
    <string name="artificial_intelligence_decision_system">Artificial intelligence decision system</string>
    <string name="authorization_failed">Authorization Failed</string>
    <string name="back">Back</string>
    <string name="bee_charac_one">Quantify Finance</string>
    <string name="bee_charac_three">Quantitative Trading</string>
    <string name="bee_charac_two">Quantitative Time-Selected</string>
    <string name="bee_time">Time Lord</string>
    <string name="bee_trend">Stock Pioneer</string>
    <string name="chosenPrice">Chosen price</string>
    <string name="lzxg_jzprice">End-price</string>
    <string name="lzxg_jztime">Deadline</string>
    <string name="lzxg_newprice">Last</string>
    <string name="lzxg_rise">Change%</string>
    <string name="lzxg_xgprice">Filter Time</string>
    <string name="lzxg_xgtime">Filter Date</string>
    <string name="positioncontrol_cash">Initial Fund:</string>
    <string name="positioncontrol_displayuntraderecord">显示未成交记录</string>
    <string name="prime_charchter_1">Artificial Intelligence</string>
    <string name="prime_charchter_2">Z quantification</string>
    <string name="prime_charchter_3">Screen Stock Intelligently</string>
    <string name="quote_name">Name</string>
    <string name="restore_default">Default</string>
    <string name="robot_feature">Hi, I’m a brand-new Z-Quantification system with artificial intelligence. I’m good at searching the intelligent Z and then operate it when profits up to the highest!</string>
    <string name="save">Save</string>
    <string name="settings_aboutus">About Us</string>
    <string name="settings_category_appsetting">App Setting</string>
    <string name="settings_category_help">Help</string>
    <string name="settings_category_website">Website</string>
    <string name="settings_clearcache">Clear Cache</string>
    <string name="settings_evaluate">Evaluate</string>
    <string name="settings_facebook">Facebook</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_help">Help</string>
    <string name="settings_language">Language</string>
    <string name="settings_remind">Push</string>
    <string name="settings_syncstock">Auto Sync Stock</string>
    <string name="settings_website">Website</string>
    <string name="shock_pull">Shocking pull up</string>
    <string name="stock_chengje">CRLT</string>
    <string name="stock_chengjl">VOl</string>
    <string name="stock_high">High</string>
    <string name="stock_low">Low</string>
    <string name="stock_open">Open</string>
    <string name="stock_zhangdie">A-D</string>
    <string name="stock_zhangfu">%Chng</string>
    <string name="stock_zs">Pre-Close</string>
    <string name="stock_zuixin">Price</string>
    <string name="subtitle_robot">TRANSFORMER</string>
    <string name="title_bee">BUMBLEBEE</string>
    <string name="title_prime">OPTIMUS PRIME</string>
    <string name="todayrise">Interval%</string>
    <string name="yield_rate">Yield Rate</string>
</resources>