<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/list_item_title_bg" android:layout_width="match_parent" android:layout_height="48.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/name" android:layout_width="120.0dp" android:layout_height="match_parent" android:text="@string/quote_name" />
    <com.hlzzb.xjp.widget.LinearLayoutIntercept android:focusable="false" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.hlzzb.xjp.widget.StockScrollView android:id="@id/stockListView" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:overScrollMode="never">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent">
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/price" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_zuixin" />
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/rise" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_zhangfu" />
                <TextView android:textColor="@color/white" android:gravity="center" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_zhangdie" />
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/preClose" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_zs" />
                <TextView android:textColor="@color/white" android:gravity="center" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_chengjl" />
                <TextView android:textColor="@color/white" android:gravity="center" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_chengje" />
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/open" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_open" />
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/high" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_high" />
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/low" android:layout_width="80.0dp" android:layout_height="match_parent" android:text="@string/stock_low" />
            </LinearLayout>
        </com.hlzzb.xjp.widget.StockScrollView>
    </com.hlzzb.xjp.widget.LinearLayoutIntercept>
</LinearLayout>
