<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/miage_data_kuang_normal" android:layout_width="match_parent" android:layout_height="70.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/name" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/all_stock_name" android:layout_weight="1.5" />
    <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/chosenPrice" android:layout_weight="1.0" />
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/preClose" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/lzxg_rise" android:layout_weight="1.0" />
    <TextView android:textColor="@color/white" android:gravity="center" android:layout_width="0.0dp" android:layout_height="match_parent" android:text="@string/todayrise" android:layout_weight="1.0" />
</LinearLayout>
