<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/robot_prime_layout" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@drawable/prime_bg" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar android:id="@id/toolbar_prime" android:layout_width="match_parent" android:layout_height="?actionBarSize" />
        <hc.com.robot.view.FontsTextView android:textSize="@dimen/textsize_32sp" android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_20dp" android:text="@string/title_prime" app:FontsTextView_typeface="airstrike" />
        <hc.com.robot.view.FontsTextView android:textSize="@dimen/textsize_20sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_12dp" android:text="@string/subtitle_robot" app:FontsTextView_typeface="airstrike" />
        <LinearLayout android:orientation="horizontal" android:padding="@dimen/padding_8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
            <FrameLayout android:id="@id/robot_container" android:layout_width="0.0dp" android:layout_height="220.0dp" android:layout_weight="3.0" android:paddingEnd="@dimen/padding_12dp" />
            <RelativeLayout android:orientation="vertical" android:paddingTop="@dimen/padding_20dp" android:paddingBottom="@dimen/padding_20dp" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="2.0">
                <TextView android:background="@drawable/prime_charact_bg" android:text="@string/prime_charchter_1" android:layout_centerHorizontal="true" style="@style/TextStyleCharact" />
                <TextView android:background="@drawable/prime_charact_bg" android:text="@string/prime_charchter_2" android:layout_centerInParent="true" style="@style/TextStyleCharact" />
                <TextView android:background="@drawable/prime_charact_bg" android:text="@string/prime_charchter_3" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/TextStyleCharact" />
            </RelativeLayout>
        </LinearLayout>
        <hc.com.robot.view.FontsTextView android:textStyle="bold" android:layout_gravity="left" android:paddingTop="@dimen/padding_4dp" android:text="@string/robot_feature" android:lines="3" android:lineSpacingExtra="@dimen/padding_4dp" android:layout_marginStart="@dimen/margin_20dp" app:FontsTextView_typeface="huakang" style="@style/TextStyle" />
        <hc.com.robot.view.FontsTextView android:textSize="@dimen/textsize_16sp" android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_marginTop="@dimen/margin_8dp" android:text="@string/yield_rate" app:FontsTextView_typeface="huakang" style="@style/TextStyle" />
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:paddingLeft="@dimen/padding_8dp" android:paddingTop="@dimen/padding_20dp" android:paddingRight="@dimen/padding_8dp" android:paddingBottom="@dimen/padding_20dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <hc.com.robot.view.FontsTextView android:id="@id/tv_prime_rate" android:text="@string/all_none" app:FontsTextView_typeface="airstrike" style="@style/FontsStyleRate" />
            <hc.com.robot.view.FontsTextView android:text="%" android:layout_marginStart="@dimen/margin_2dp" app:FontsTextView_typeface="airstrike" style="@style/FontsStyleRate" />
        </LinearLayout>
        <hc.com.robot.view.FontsTextView android:textSize="@dimen/textsize_18sp" android:textStyle="bold" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/all_follow_tips" app:FontsTextView_typeface="huakang" style="@style/TextStyle" />
        <hc.com.robot.view.FontsTextView android:id="@id/btn_follow_prime" android:background="@drawable/shape_follow_prime" android:text="@string/all_follow" app:FontsTextView_typeface="airstrike" style="@style/FontsStyleFollow" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
