<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/black" android:id="@id/dt_data_title" android:padding="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <View android:background="@color/color_black_d9d9d9" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="80.0dp" android:layout_height="50.0dp">
            <TextView android:textColor="#333333" android:gravity="center" android:id="@id/name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/all_stock_name" android:singleLine="true" />
        </LinearLayout>
        <com.hlzzb.xjp.view.LinearLayoutIntercept android:focusable="false" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.hlzzb.xjp.view.StockScrollView android:id="@id/stockListView" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" android:overScrollMode="never">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textColor="#333333" android:gravity="center" android:id="@id/price" android:layout_width="80.0dp" android:layout_height="50.0dp" android:text="@string/lzxg_newprice" />
                    <TextView android:textColor="#333333" android:gravity="center" android:layout_width="70.0dp" android:layout_height="50.0dp" android:text="@string/lzxg_rise" />
                    <TextView android:textColor="#333333" android:gravity="center" android:layout_width="70.0dp" android:layout_height="50.0dp" android:text="@string/lzxg_xgtime" />
                    <TextView android:textColor="#333333" android:gravity="center" android:layout_width="70.0dp" android:layout_height="50.0dp" android:text="@string/lzxg_xgprice" />
                    <TextView android:textColor="#333333" android:gravity="center" android:layout_width="70.0dp" android:layout_height="50.0dp" android:text="@string/lzxg_jztime" />
                    <TextView android:textColor="#333333" android:gravity="center" android:layout_width="70.0dp" android:layout_height="50.0dp" android:text="@string/lzxg_jzprice" />
                </LinearLayout>
            </com.hlzzb.xjp.view.StockScrollView>
        </com.hlzzb.xjp.view.LinearLayoutIntercept>
    </LinearLayout>
    <View android:background="@color/color_black_d9d9d9" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:orientation="vertical" android:id="@id/data_container" android:layout_width="match_parent" android:layout_height="wrap_content" />
</LinearLayout>
